<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Prototipo: Conectarse a un servidor remoto</string>
    <string name="action_settings">Settings</string>
    <string name="logo_login">Logo</string>
    <string name="user_login">Usuario</string>
    <string name="pass_login">Contraseña</string>
    <string name="login_login">Login</string>
    <string name="forget_pass_login">¿Olvido su contraseña?</string>
    <string name="register_login">Registrarse!</string>
    <string name="bienvenido_bienvenida">¡Bienvenido!</string>
    <string name="cerrar_sesion_bienvenida">¡Cerrar Sesión!</string>
    
    
    
</resources>